--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,17 @@ body {
   color: var(--color-text);
 }
 
+main {
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+section ul {
+  max-height: 250px;
+  overflow-y: auto;
+}
+
 .inline-icon {
   height: 1em;
   vertical-align: text-bottom;
