--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,13 @@ const STATIC_CATEGORIES = {
 const yazzyUrl = import.meta.env.YAZZY_URL;
 const feedItems = await getAllFeedItems();
 const parseTime = performance.now() - start;
-const updateTime = new Date().toLocaleString();
+const updateTime = new Date();
+
+feedItems.errors = [
+	...feedItems.errors,
+	...feedItems.contents
+		.map((item) => new Error(`No title for ${item.link}`)),
+]
 
 const categories = [
 	STATIC_CATEGORIES.All,
@@ -136,13 +142,14 @@ const categoriesSelectorCss = categories
 			type="image/svg+xml"
 		/>
 		<link rel="manifest" href="/rss-reader/manifest.json" />
+		<script src="/rss-reader/relative-datetime.js" is:inline></script>
 		<style set:html={categoriesSelectorCss}></style>
 	</head>
 	<body
 		class="font-system text-base md:grid grid-cols-12 auto-rows-min p-4 bg-orange-50 dark:bg-slate-900 dark:text-slate-300 text-stone-700 font-semibold"
 	>
 		<header
-			class="col-span-12 row-span-1 h-fit mb-4 flex flex-row gap-8 items-center overflow-auto"
+			class="col-span-12 row-span-1 h-fit mb-4 flex flex-row gap-4 items-center overflow-auto flex-wrap"
 		>
 			<h1 class="">Carter's RSS Feeds</h1>
 			<hr class="flex-grow h-px border-0 border-b-2 border-b-stone-500" />
@@ -156,7 +163,7 @@ const categoriesSelectorCss = categories
 					Took {(parseTime / 1000).toFixed(0)}s
 				</li>
 				<li>
-					Last updated at {updateTime}
+					Last updated&nbsp;<relative-time datetime={(updateTime).toISOString()}>{updateTime.toLocaleString()}</relative-time>
 				</li>
 				<li>
 					<a
@@ -230,11 +237,14 @@ const categoriesSelectorCss = categories
 								class="underline block break-words"
 							/>
 							<div class="no-underline text-sm font-normal">
-								<span>{new Date(item.pubIsoDate).toDateString()}</span>
+								<relative-time datetime={(new Date(item.pubIsoDate)).toISOString()}>{(new Date(item.pubIsoDate)).toLocaleString()}</relative-time>
 								<span>|</span>
 								<span>{item.feedName}</span>
 								<span>|</span>
 								<span>{item.category}</span>
+								<span>|</span>
+								<a href={`https://archive.is/${item.link}`} class="underline" target="_blank"
+											rel="noopener noreferrer">archive.is</a>
 								{Boolean(yazzyUrl) ? (
 									<>
 										<span>|</span>
