Use Github's relative-time element

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,7 +136,7 @@ const categoriesSelectorCss = categories
 			type="image/svg+xml"
 		/>
 		<link rel="manifest" href="/rss-reader/manifest.json" />
-		<script src="/rss-reader/relative-datetime.js" is:inline></script>
+		<script type="module" src="/node_modules/@github/relative-time-element/dist/index.js"></script>
 		<style set:html={categoriesSelectorCss}></style>
 	</head>
 	<body
