Fix feed colspan

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -221,7 +221,7 @@ body:has(#category-picker #${cssAttribute(STATIC_CATEGORIES.All)}:checked) .${cs
 				}
 			</footer>
 		</nav>
-		<main class="overflow-y-auto">
+		<main class="overflow-y-auto col-span-11">
 			<ul class="flex flex-col gap-2">
 				{
 					feedItems.contents.map((item) => (
