--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -142,7 +142,7 @@ body:has(#category-picker #${cssAttribute(STATIC_CATEGORIES.All)}:checked) .${cs
 		<style set:html={categoriesSelectorCss}></style>
 	</head>
 	<body
-		class="font-system text-base p-4 bg-orange-50 dark:bg-slate-900 dark:text-slate-300 text-stone-700 font-semibold h-screen flex flex-col md:grid gap-2 md:gap-4 md:grid-cols-7"
+		class="font-system text-base p-4 bg-orange-50 dark:bg-slate-900 dark:text-slate-300 text-stone-700 font-semibold h-screen flex flex-col md:grid gap-2 md:gap-4 md:grid-cols-7 md:grid-rows-12 auto-rows-fr"
 	>
 		<header class="col-span-full flex flex-row gap-x-2 items-center flex-wrap">
 			<h1 class="">Carter's RSS Feeds</h1>
@@ -171,7 +171,7 @@ body:has(#category-picker #${cssAttribute(STATIC_CATEGORIES.All)}:checked) .${cs
 				</li>
 			</ul>
 		</header>
-		<nav class="md:flex flex-col justify-between gap-4">
+		<nav class="md:flex flex-col justify-between gap-4 row-start-2 -row-end-1">
 			<ul
 				id="category-picker"
 				class="flex flex-row overflow-x-auto items-center md:items-start md:flex-col gap-2 md:gap-1"
@@ -221,7 +221,9 @@ body:has(#category-picker #${cssAttribute(STATIC_CATEGORIES.All)}:checked) .${cs
 				}
 			</footer>
 		</nav>
-		<main class="overflow-y-auto md:col-start-2 md:-col-end-1">
+		<main
+			class="overflow-y-auto md:col-start-2 md:-col-end-1 row-start-2 -row-end-1"
+		>
 			<ul class="flex flex-col gap-2">
 				{
 					feedItems.contents.map((item) => (
