--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -140,13 +140,14 @@ body:has(#category-picker #${cssAttribute(STATIC_CATEGORIES.All)}:checked) .${cs
 			import "@github/relative-time-element";
 		</script>
 		<style set:html={categoriesSelectorCss}></style>
+		<link href={`/rss-reader/public/styles.input.css`} rel="stylesheet" />
 	</head>
 	<body
 		class="font-system text-base p-4 bg-orange-50 dark:bg-slate-900 dark:text-slate-300 text-stone-700 font-semibold h-screen flex flex-col md:grid gap-2 md:gap-4 md:grid-cols-7 md:grid-rows-12 auto-rows-fr"
 	>
 		<header class="col-span-full flex flex-row gap-x-2 items-center flex-wrap">
 			<h1 class="">Carter's RSS Feeds</h1>
-			<hr class="flex-grow h-px border-0 border-b-2 border-b-stone-500" />
+			<hr class="grow h-px border-0 border-b-2 border-b-stone-500" />
 			<ul class="flex flex-row gap-2">
 				{
 					feedItems.errors.length > 0 ? (
