--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import getAllFeedItems from "../services/feeds";
 const start = performance.now();
 function isRecent(date: number): boolean {
@@ -140,7 +141,6 @@ body:has(#category-picker #${cssAttribute(STATIC_CATEGORIES.All)}:checked) .${cs
 			import "@github/relative-time-element";
 		</script>
 		<style set:html={categoriesSelectorCss}></style>
-		<link href={`/rss-reader/public/styles.input.css`} rel="stylesheet" />
 	</head>
 	<body
 		class="font-system text-base p-4 bg-orange-50 dark:bg-slate-900 dark:text-slate-300 text-stone-700 font-semibold h-screen flex flex-col md:grid gap-2 md:gap-4 md:grid-cols-7 md:grid-rows-12 auto-rows-fr"
