--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import CodeFileIcon from "../components/icons/CodeFileIcon.astro";
 import DocumentIcon from "../components/icons/DocumentIcon.astro";
 import getAllFeedItems from "../services/feeds";
 
-const { contents: feedItems } = await getAllFeedItems();
+const {contents: feedItems} = await getAllFeedItems();
 const updateTime = new Date();
 ---
 
@@ -28,7 +28,7 @@ const updateTime = new Date();
 			import "@github/relative-time-element";
 		</script>
 	</head>
-	<body class="m-2">
+	<body class="m-2 max-w-[65ch] mx-auto">
 		<header class="flex flex-row gap-4">
 			<h1 class="grow">Carter's RSS Feeds</h1>
 			<div class="flex flex-row gap-1 items-center">
@@ -43,7 +43,7 @@ const updateTime = new Date();
 			</div>
 			<a
 				href="https://github.com/carterworks/rss-reader"
-				class="pointer hover:bg-gray-100 rounded-md flex flex-row gap-1 items-center"
+				class="pointer flex flex-row gap-1 items-center"
 				title="View the source code on GitHub"
 			>
 				<CodeFileIcon />
