--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -1,10 +1,10 @@
 ---
-import type { FeedItem } from "../services/feeds.ts";
+import type Parser from "rss-parser";
 import ArchiveIcon from "./icons/ArchiveIcon.astro";
 import LinkIcon from "./icons/LinkIcon.astro";
 
 interface Props {
-	item: FeedItem;
+	item: Parser.Item;
 	as?: "li" | "div";
 	class?: string;
 }
@@ -17,21 +17,34 @@ const {
 
 const yazzyUrl = import.meta.env.YAZZY_URL satisfies string | undefined;
 
-const faviconUrl = `https://www.google.com/s2/favicons?domain=${item.feedLink}`;
+const faviconUrl = `https://www.google.com/s2/favicons?domain=${item.link}`;
 ---
 
 <Element class={`flex flex-row gap-2 group *:mt-2 ${additionalClasses}`}>
 	<img
 		src={faviconUrl}
-		alt={`Favicon for ${item.feedName}`}
+		alt={`Favicon for ${item.link}`}
 		class="w-4 h-4 transition-all grayscale dark:invert group-hover:grayscale-0 group-hover:invert-0"
 	/>
 	<div class="grow !mt-0">
 		<a href={item.link} class="block">
 			<h2 class="text-lg font-bold">{item.title}</h2>
+			{
+				item.contentSnippet && (
+					<p>
+						{item.contentSnippet
+							.replace(/\n+/g, " ")
+							.trim()
+							.split(" ")
+							.slice(0, 15)
+							.join(" ") + "…"}
+					</p>
+				)
+			}
 			<p>
-				{item.feedName} • {item.category} • <relative-time
-					datetime={new Date(item.pubIsoDate).toISOString()}></relative-time>
+				{item.author} • <relative-time
+					datetime={new Date(item.pubDate ?? item.isoDate ?? "").toISOString()}
+				></relative-time>
 			</p>
 		</a>
 	</div>
