Add som header spacing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const items = (await feed)?.items
 			import "@github/relative-time-element";
 		</script>
 	</head>
-	<body class="max-w-prose mx-auto py-2 px-2 md:px-0 bg-bg text-tx">
+	<body class="max-w-prose mx-auto py-4 px-2 md:px-0 bg-bg text-tx space-y-4">
 		<header class="flex flex-row gap-4">
 			<h1 class="grow">Carter's RSS Feeds</h1>
 			<div class="flex flex-row gap-1 items-start">
