--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Parser from "rss-parser";
 import FeedItem from "../components/FeedItem.astro";
 import BookmarkIcon from "../components/icons/BookmarkIcon.astro";
-import ClockIcon from "../components/icons/ClockIcon.astro";
 import CodeFileIcon from "../components/icons/CodeFileIcon.astro";
 import DocumentIcon from "../components/icons/DocumentIcon.astro";
 import "../styles/global.css";
@@ -65,10 +64,6 @@ const items = (await feed)?.items
 		<header class="flex flex-row gap-4">
 			<h1 class="grow">Carter's RSS Feeds</h1>
 			<div class="flex flex-row gap-1 items-start">
-				<ClockIcon class="mt-1" />
-				<relative-time datetime={updateTime}></relative-time>
-			</div>
-			<div class="flex flex-row gap-1 items-start">
 				<DocumentIcon class="mt-1" />
 				<p>
 					{items?.length}<span class="hidden md:inline">&nbsp;items</span>
@@ -103,13 +98,20 @@ const items = (await feed)?.items
 			{
 				!error && (
 					<ul class="space-y-2">
+						<li class="italic flex flex-row gap-2 items-center not-first:mt-2">
+							<hr class="grow-1 border-tx" />
+							<p class="text-center">
+								Last updated <relative-time datetime={updateTime} />
+							</p>
+							<hr class="grow-1 border-tx" />
+						</li>
 						{items?.map((item) => (
 							<FeedItem item={item} as="li" />
 						))}
 						<li class="italic flex flex-row gap-2 items-center not-first:mt-2">
 							<hr class="grow-1 border-tx" />
 							<p class="text-center">
-								Thus ends the feed. At least for the past
+								Thus ends the feed, or, at least that's everything in the last
 								<relative-time datetime={cutoffTime} format="duration" />.
 							</p>
 							<hr class="grow-1 border-tx" />
